--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App{
+  width: 100%;
+  height: 100vh;
+  /* background: palevioletred; */
   display: flex;
-  flex-direction: column;
+  justify-content: flex-end;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background: honeydew;
+}
+.content{
+  /* background: red; */
+  padding: 2rem;
+  font-size: 23px;
+  z-index: 99;
+}
+.content p{
+  font-weight: 700;
+  font-size: 33px;
+}
+.content span{
+  display: block;
+}
+
+.content a{
+  display: inline-block;
+  padding: 5px 20px;
+  background: #420D7A;
   color: white;
+  text-decoration: none;
+  transition: background 1s ease;
 }
-
-.App-link {
-  color: #61dafb;
+.content a:hover{
+  background: #5b0ab1;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.freepik{
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  color: #420D7A;
+  text-decoration: none;
 }
